src/main/java/com/example/demo/error/TokenCreationException.java
package com.example.demo.error;

public class TokenCreationException extends BusinessException {
    public TokenCreationException(String message, ErrorCode errorCode) {
        super(message, errorCode);
    }
}